# This file is part of nvml-sys. It is subject to the license terms in the COPYRIGHT file found in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/nvml-sys/master/COPYRIGHT. No part of nvml-sys, including this file, may be copied, modified, propagated, or distributed except according to the terms contained in the COPYRIGHT file.
# Copyright © 2017 The developers of nvml-sys. See the COPYRIGHT file in the top-level directory of this distribution and at https://raw.githubusercontent.com/lemonrock/nvml-sys/master/COPYRIGHT.


[package]
name = "nvml-sys"
description = "A low-level FFI wrapper around the Persistent Memory Development Kit, PMDK (formerly NVML) and its libraries, including libpmem, libpmemobj and others. Currently tracks version 1.3.1."
keywords = ["NVML", "pmem", "libpmem", "PMDK"]
categories =  ["hardware-support", "external-ffi-bindings", "database"]
license = "MIT"
authors = ["Raphael Cohn <raphael.cohn@stormmq.com>"]
homepage = "https://github.com/lemonrock/nvml-sys"
repository = "https://github.com/lemonrock/nvml-sys.git"
exclude = ["/compile-pmdk.conf.d/temporary/**/*", "/bindgen-wrapper.conf.d/temporary/**/*", "/tools/bindgen-wrapper/temporary/**/*", ".gitignore", ".gitmodules", "*.iml", "/.cargo/**/*", "/.tm_properties", "/clippy.toml", "/rustfmt.toml", "/src/bindgen/**/*"]
build = "src/build.rs"
readme = "README.md"
publish = true
version = "0.0.3"

[dependencies]
libc = "0.2"
